--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     Made with ❤️ in India.
   </footer>
 
-  <script src="rj.js" type="text/javascript"></script>
+  <script src="./index.js" type="text/javascript"></script>
 </body>
 
 </html>
